2009-06-23  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* basechsuffix.c, chartostring.c, coredump.c, eofeoln.c,
	fprintreal.c, input2int.c, inputint.c, main.c, openclose.c,
	printversion.c, texmfmp.c, uexit.c, usage.c, win32main.c,
	zround.c: drop P?C, P?H, use ANSI C function declarations.

2009-06-10  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am (AM_CFLAGS): enable compiler warnings.
	* lib.h (new): declarations for *.c from ../cpascal.h.
	* basechsuffix.c, chartostring.c, eofeoln.c, fprintreal.c,
	input2int.c, inputint.c, main.c, openclose.c, printversion.c,
	zround.c: #include "lib.h" to declare function prototypes.
	* openclose.c: declare internal function recorder_record_name as
	static; declare arg of recorder_record_input and
	recorder_record_output as const_string as from ../cpascal.h.

2009-06-01  Karl Berry  <karl@tug.org>

	* printversion.c (printversionandexit): it's 2009.
	Also, remove special references to kpathsea author(s) etc.

2009-03-29  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* texmfmp.c: remove all references to (Web2C version of) MP.

2009-05-18  Karl Berry  <karl@tug.org>

	* openclose.c (recorder_start): use output_directory for the .fls
	  file, if it has been specified with --output-directory.
	  metapost mail from Nicola, 16 May 2009 13:41:36.

2009-03-29  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* texmfmp.c: remove all references to Omega, eOmega, and pdfeTeX.

2009-03-28  Karl Berry  <karl@tug.org>

	* texmfmp.c (mk_shellcmdlist, shell_cmd_is_allowed): not static,
	so luatex can access.  From Taco.

2009-03-27  Taco Hoekwater  <taco@luatex.org>

	* texmfmp.c (parse_options): add #ifndef luaTeX guard for 
	--src-specials, because luaTeX does not implement it.
	(parse_src_specials_option): add #ifndef luaTeX guard for
	 the same reason.

2009-03-02  Karl Berry  <karl@tug.org>

	* texmfmp.c (long_options): make -enable-write18 and -disable-write18
	synonyms for -shell-escape and -no-shell-escape.
